apps/weave-scope/kubernetes/scope.agent.dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-scope-cluster-agent
  annotations:
    cloud.weave.works/launcher-info: |-
      {
        "original-request": {
          "url": "/k8s/v1.13/scope.yaml",
          "date": "Sun May 24 2020 06:01:40 GMT+0000 (UTC)"
        },
        "email-address": "support@weave.works"
      }
  labels:
    name: weave-scope-cluster-agent
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: cluster-agent
  namespace: weave
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: weave-scope-cluster-agent
      app: weave-scope
      weave-cloud-component: scope
      weave-scope-component: cluster-agent
  template:
    metadata:
      labels:
        name: weave-scope-cluster-agent
        app: weave-scope
        weave-cloud-component: scope
        weave-scope-component: cluster-agent
    spec:
      containers:
        - name: scope-cluster-agent
          args:
            - '--mode=probe'
            - '--probe-only'
            - '--probe.kubernetes.role=cluster'
            - '--probe.http.listen=:4041'
            - '--probe.publish.interval=4500ms'
            - '--probe.spy.interval=2s'
            - '--weave=false'
            - 'weave-scope-app.weave.svc.cluster.local:80'
          command:
            - /home/weave/scope
          image: 'docker.io/weaveworks/scope:1.13.1'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4041
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 80Mi
      serviceAccountName: weave-scope
...
