apps/weave-scope/kubernetes/scope.app.dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-scope-app
  annotations:
    cloud.weave.works/launcher-info: |-
      {
        "original-request": {
          "url": "/k8s/v1.13/scope.yaml",
          "date": "Sun May 24 2020 06:01:40 GMT+0000 (UTC)"
        },
        "email-address": "support@weave.works"
      }
  labels:
    name: weave-scope-app
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  namespace: weave
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: weave-scope-app
      app: weave-scope
      weave-cloud-component: scope
      weave-scope-component: app
  template:
    metadata:
      labels:
        name: weave-scope-app
        app: weave-scope
        weave-cloud-component: scope
        weave-scope-component: app
    spec:
      containers:
        - name: app
          args:
            - '--mode=app'
            - '--weave=false'
          command:
            - /home/weave/scope
          image: 'docker.io/weaveworks/scope:1.13.1'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4040
              protocol: TCP
...
