apps/weave-scope/kubernetes/scope.app.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weave-scope-app
  annotations:
    cloud.weave.works/launcher-info: |-
      {
        "original-request": {
          "url": "/k8s/v1.13/scope.yaml",
          "date": "Sun May 24 2020 06:01:40 GMT+0000 (UTC)"
        },
        "email-address": "support@weave.works"
      }
  labels:
    name: weave-scope-app
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
  namespace: weave
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 4040
  selector:
    name: weave-scope-app
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app
...
